<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tilt</string> <!-- exclude -->
    <string name="action_settings">Settings</string>
    <string name="game_title">T I L T</string> <!-- exclude -->
    <string name="play_game">Play Game</string>
    <string name="share_string">Share</string>
    <string name="rate_string">Rate and Review</string>
    <string name="playagain_string">Play Again</string>
    <string name="ads_string">Turn Off Ads</string>
    <string name="removeads_string">Remove Ads</string>
    <string name="mainmenu_string">Main Menu</string>
    <string name="title_activity_traditional_mode" translatable="false">TraditionalMode</string> <!-- exclude -->
    <string name="title_activity_redirect">Redirect</string> <!-- exclude -->
    <string name="turn_off_ads">Turn Off Ads</string>
    <string name="how_to_play">How To Play</string>
    <string name="turn_music_off">Turn Music Off</string>
    <string name="you">Y O U</string>
    <string name="lose">L O S E !</string>
    <string name="your_score">Your Score</string>
    <string name="high_score">High Score</string>
    <string name="new_string">"New "</string>
    <string name="will_string">"I will !!!"</string>
    <string name="sharing_string">Come play this awesome game I found in the Google Play store called Tilt the Gaps. It`s really fun!!!</string>
    <string name="instrictions_string">"How to Play Traditional Game Mode:

1.) Hold your device flat before the game starts

2.) Tilt your device to move the ball through gaps in the oncoming rectangles to try to get as many points as you can by staying alive as long as possible!



How to Play Chase Game Mode:

1.) Hold your device flat before the game starts

2.) Exit the initial start game circle to begin the game. Shortly after you exit the start game circle a red ball will appear and start chasing you!

3.) Tilt your device to move the ball to collect the circles colored the same as the ball for points, BUT you will be chased by a red ball while you are playing. The higher your score...THE FASTER IT GETS! SO WATCH OUT!!! If the red ball touches your ball then it is GAME OVER!


How to Play Shift Game Mode:

1.) Hold your device flat before the game starts

2.) Exit the initial start game circle to begin the game. Shortly after you exit the start game circle, 3 rectangles on one side of the screen will pop up

3.) Tilt your device to move the ball to touch the rectangle the same color as the ball. If you touch the wrong rectangle or if time runs out YOU LOSE! (Every 10 points, 10 seconds are added to the game time)


*** Don`t forget to rate and review TILT!!! ***

I care deeply about my users and will actively fix any problems and address any concerns you have so just ask!"</string>
    <string name="title_activity_chase_mode" translatable="false">ChaseMode</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="title_activity_shift_mode" translatable="false">ShiftMode</string>

</resources>
