<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="#ff60d0a6"
                android:id="@+id/game_title">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/game_title"
        android:id="@+id/titleTextView"
        android:textSize="140sp"
        android:textColor="#f2fdf84d"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:id="@+id/turnOffAdsButton"
        android:background="@drawable/white_button"
        android:layout_below="@+id/titleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff626664"
        android:text="@string/turn_off_ads"/>

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/share_string"
        android:id="@+id/shareButton"
        android:background="@drawable/blue_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#a8fffffb"/>

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/rate_string"
        android:id="@+id/rateButton"
        android:background="@drawable/opaque_button"
        android:layout_alignTop="@+id/turnOffAdsButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#a8fffffb"/>

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/play_game"
        android:id="@+id/playGameButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/yelow_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/turn_music_off"
        android:id="@+id/musicTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff990008"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/instructionsTextView"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/rateButton"
        android:layout_alignEnd="@+id/rateButton"
        android:textSize="15sp"
        android:textColor="#f28f63b0"
        android:text="@string/how_to_play"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3171635020408755/6979663022">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
