<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="benyamephrem.tilt.UI.Redirect"
                android:background="#ff60d0a6"
                android:id="@+id/main_view">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/removeAdsButton"
        android:background="@drawable/white_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/removeads_string"
        android:layout_alignLeft="@+id/shareButton"
        android:layout_alignStart="@+id/shareButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_string"
        android:id="@+id/shareButton"
        android:background="@drawable/blue_button"
        android:layout_marginBottom="29dp"
        android:layout_above="@+id/rateButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/rateButton"
        android:layout_alignStart="@+id/rateButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_string"
        android:id="@+id/rateButton"
        android:background="@drawable/opaque_button"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainmenu_string"
        android:id="@+id/mainMenuButton"
        android:layout_below="@+id/rateButton"
        android:layout_marginTop="30dp"
        android:background="@drawable/salmon_button"
        android:layout_alignLeft="@+id/rateButton"
        android:layout_alignStart="@+id/rateButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playagain_string"
        android:id="@+id/playAgainButton"
        android:background="@drawable/yelow_button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/removeAdsButton"
        android:layout_alignEnd="@+id/removeAdsButton"
        android:layout_alignLeft="@+id/mainMenuButton"
        android:layout_alignStart="@+id/mainMenuButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score"
        android:id="@+id/highScoreTitleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="#95883dff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/highScoreTextView"
        android:layout_alignTop="@+id/shareButton"
        android:layout_centerHorizontal="true"
        android:text="--"
        android:textSize="60sp"
        android:textColor="#95883dff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:id="@+id/textView3"
        android:layout_above="@+id/mainMenuButton"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="#480400ff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        android:id="@+id/scoreTextView"
        android:layout_alignBottom="@+id/mainMenuButton"
        android:layout_centerHorizontal="true"
        android:textSize="60sp"
        android:textColor="#480400ff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lose"
        android:id="@+id/bottomTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fffd5c55"
        android:textSize="60sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you"
        android:id="@+id/topTextView"
        android:textColor="#fffd5c55"
        android:textSize="60sp"
        android:layout_above="@+id/bottomTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_string"
        android:id="@+id/newTextView"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/highScoreTitleTextView"
        android:layout_toStartOf="@+id/highScoreTitleTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=" ! ! !"
        android:id="@+id/exclamationTextView"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/highScoreTitleTextView"
        android:layout_toEndOf="@+id/highScoreTitleTextView"
        android:textSize="40sp"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3171635020408755/8456396225">
    </com.google.android.gms.ads.AdView>



</RelativeLayout>
